minor css fix, make header render on server to prevent layout shift

--- a/styles/Navigation.module.scss
+++ b/styles/Navigation.module.scss
@@ -17,7 +17,7 @@
   align-items: center;
   color: var(--dark);
   font-weight: 700;
-  div {
+  > div {
     padding: 0;
     display: flex;
     justify-content: space-between;
